# LfD_in_Relational_Domain_using_Reinforcement_Learning

./: .gitignore  CMakeLists.txt  README.md
furnace/Demonstrations/between/: four  one  three  two
furnace/Demonstrations/circleTop/: one  three  two
furnace/Demonstrations/face/: f1
furnace/Demonstrations/sandwich/: one  s2  s3
furnace/Models/predict/between/: mainOQsa.pro  mainQsa.pro  templateOQsa.pro  templateQsa.pro
furnace/Models/predict/circleTop/: mainOQsa.pro  mainQsa.pro  templateOQsa.pro  templateQsa.pro
furnace/Models/predict/face/: mainOQsa.pro  mainQsa.pro  templateOQsa.pro  templateQsa.pro
furnace/Models/predict/sandwich/: mainOQsa.pro  mainQsa.pro  templateOQsa.pro  templateQsa.pro
furnace/Models/templates/: oqsa.bg  qsa.s
furnace/Models/train/between/oqsa/: oqsa.kb  oqsa.s
furnace/Models/train/between/oqsa/tilde/: oqsa.out  oqsa.ptree
furnace/Models/train/between/qsa/: qsa.kb  qsa.s
furnace/Models/train/between/qsa/tilde/: qsa.out  qsa.ptree
furnace/Models/train/circleTop/oqsa/: oqsa.kb
furnace/Models/train/circleTop/oqsa/tilde/: oqsa.out  (+1 more)
furnace/Models/train/circleTop/qsa/: qsa.bg  qsa.kb
furnace/Models/train/face/oqsa/: oqsa.kb  oqsa.s
furnace/Models/train/face/qsa/: qsa.kb
furnace/Models/train/sandwich/oqsa/: oqsa.kb
furnace/Models/train/sandwich/qsa/: qsa.kb
furnace/Utils/: fileSystem.py  makeTemplate.py  modelsFormat.py  predict.py  try.sh
include/: allStructures.h  circle.h  externalDefinitions.h.in  objects.hpp  quad.h  recorder.h  scene_generator.h
src/: circle.cpp  main.cpp  quad.cpp  scene_generator.cpp
(+10 files in other folders)
